# smart_calendar_agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: experts.csv
src/: app.py  calendar_client.py  expert_loader.py  matcher.py  models.py
tests/: conftest.py  test_calendar_client.py  test_expert_loader.py  test_matcher.py  test_models.py
